--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # git ignore file
 /src/Debug
+/src/tokens.txt
 /src/LR(0).txt
-/src/table.txt
+/src/slr-table.txt
 /src/conflicts.txt
+/src/protocol.txt
 /src/MathExpressionRecognizer.opensdf
 /src/MathExpressionRecognizer.sdf
 /src/MathExpressionRecognizer.v12.suo
